--- a/home.html
+++ b/home.html
@@ -2,13 +2,60 @@
 
 <html>
   <head>
-    <title>INSERT TITLE HERE!</title>
+    <title>Tiffany Zhang</title>
     <link rel="stylesheet" href="index.css">
     <!-- TODO: add additional links here! e.g. fonts, icons, more stylesheets, etc. -->
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <!-- TODO: put your HTML code here! -->
+    <div class="centerer">
+        <div class="top-section">
+            <div class="navbar">
+                <a class="navbutton1" href="./home.html">Tiffany Zhang</a>
+                <div class="grey">
+                <a class="navbutton2" href="./home.html">Projects</a>
+                <a class="navbutton2" href="./home.html">About</a>
+                <a class="navbutton2" href="./home.html">Resume</a>
+                </div>
+            </div>
+            <h1 class="intro">I'm Tiffany -- a full-stack developer studying at Brown University</h1>
+        </div>
+        <div class="column-flex">
+            <div class="grid">
+                <a href="./redesign.html">
+                <div class="item">
+                    <img class="preview" src="./images/manhwa.png"></img>
+                    <h1 class="item-text">Responsive Redesign</h1>
+                    <p>Analyzing, redesigning, and improving MANHWATOP's interface for greater usability</p>
+                </div>
+                </a>
+                <a href="./compliment.html">
+                <div class="item">
+                    <img class="preview" src="./images/compliment.png"></img>
+                    <h1 class="item-text">The Compliment Hub</h1>
+                    <p>A compliment sending website used to research the psychology of giving and receiving compliments</p>
+                </div>
+                </a>
+                <a href="./iterative.html">
+                <div class="item">
+                    <img class="preview" src="./images/ladder.png"></img>
+                    <h1 class="item-text">Iterative Design</h1>
+                    <p>Creating and deploying a website based on Ladder's construction labor marketplace concept</p>
+                </div>
+                </a>
+                <a href="./persona-storyboarding.html">
+                <div class="item">
+                    <img class="preview" src="./images/storyboard.png"></img>
+                    <h1 class="item-text">Personas & Storyboarding</h1>
+                    <p>An exercise in understanding and evaluating interfaces and human-interface interaction</p>
+                </div>
+                </a>
+            </div>
+        </div>
+    </div>
   </body>
 </html>
