--- a/compliment.html
+++ b/compliment.html
@@ -28,6 +28,8 @@
                 <button>View Project Website</button></a>
             </div>
             <div class="column-flex">
+				<div class="section">
+				</div>
 			</div>
 		</div>
 	</body>
