--- a/MANHWATOP/home.html
+++ b/MANHWATOP/home.html
@@ -1,1 +1,339 @@
+<!doctype html>
 
+<html>
+    <head>
+        <title>Survive as the Hero's Wife</title>
+        <html lang="en">
+        <link rel="stylesheet" href="index.css">
+        <script src="https://kit.fontawesome.com/39f0916786.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+        <script src="script.js"></script>
+        <meta content="width=device-width, initial-scale=1" name="viewport" />
+    </head>
+    <body>
+        <!-- Header -->
+        <div class="head-container">
+            <div class="header">
+                <a href="#HOME"><img class="logo" src="./images/logo.png" alt="Home Button"></a>
+                <div class="header-section-left">
+                    <a class="nav-button" href="#GENRES">Genres</a>
+                    <a class="nav-button" href="#POPULAR">Popular</a>
+                    <a class="nav-button" href="#NEW">New Updates</a>
+                </div>
+                <div class="header-section">
+                    <a class="nav-button" href="#DONATE">Donate</a>
+                    <input type="search" placeholder="Search..."><a href="#SEARCH" aria-link="search button"><button><i class="fa fa-search fa-lg"></i></button></a>
+                    <a class="nav-button" href="#LOGIN">Log In</a>
+                    <a href="javascript:void(0);" onclick="myFunction()" id="hamburger">
+                      <i class="fa fa-bars"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div id="links">
+            <a href="#GENRES">Genres</a>
+            <a href="#POPULAR">Popular</a>
+            <a href="#NEW">New Updates</a>
+            <a href="#Donate">Donate</a>
+            <a href="#Log In">Log In</a>
+        </div>
+
+        <!-- Main Content -->
+        <div class="content-container">
+
+            <!-- Manhwa Info -->
+            <div class="title">
+                <h1>
+                    Survive as the Hero's Wife
+                </h1>
+                <img id="flag" src="./images/korean.png" alt="Korean Flag">
+                <p>Latest Chapter: 2 days ago</p>
+            </div>
+
+            <div class="info">
+                <div class="info-left">
+                    <img id="main-cover" src="./images/cover.png" alt="Manhwa Cover">
+                    <div id="tag-donate">
+                        <div class="tags">
+                            <a class="tag-button" href="#TAG">Fantasy</a>
+                            <a class="tag-button" href="#TAG">Nobility</a>
+                            <a class="tag-button" href="#TAG">Reincarnation</a>
+                            <a class="tag-button" href="#TAG">Romance</a>
+                            <a class="tag-button" href="#TAG">Villainess</a>
+                        </div>
+                        <a id="donate" href="#DONATE">Support Us!</a>
+                    </div>
+                </div>
+
+                <div class="info-right">
+                    <div class="info-top">
+                        <div id="star-chapter">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                        </div>
+                        <div id="bookmark-comment">
+                            <a class="read-button" href="#FIRSTCHAPTER">Read First</a>
+                            <a class="read-button" href="#LASTCHAPTER">Read Last</a>
+                            <a href="#comments" aria-link="jump to comments"><button><i class="fa fa-comment fa-lg comment"></i></button></a>
+                            <a href="#LOGIN" aria-link="bookmark"><button><i class="fa fa-bookmark fa-lg bookmark"></i></button></a>
+                        </div>
+                    </div>
+                    <table>
+                        <tr>
+                            <td>Rating</td>
+                            <td> 4.8 / 5 out of 91</td>
+                        </tr>
+                        <tr>
+                            <td>Summary</td>
+                            <td>Canaria has been reincarnated as the villain of a popular cliché novel.
+                                According to the novel, she is destined to be executed by her husband!
+                                Determined to survive, her objective is simple: get a divorce! Will her
+                                plans be enough to save her life, or will unexpected circumstances arise
+                                to complicate matters even further?</td>
+                        </tr>
+                        <tr>
+                            <td>Status</td>
+                            <td>Ongoing</td>
+                        </tr>
+                        <tr>
+                            <td>Release</td>
+                            <td>2018</td>
+                        </tr>
+                        <tr>
+                            <td>Rank</td>
+                            <td>17th, it has 178.7K monthly views</td>
+                        </tr>
+                        <tr>
+                            <td>Alternate Titles</td>
+                            <td>This Villainess Wants a Divorce!</td>
+                        </tr>
+                        <tr>
+                            <td>Authors</td>
+                            <td>Abin, Nokki</td>
+                        </tr>
+                        <tr>
+                            <td>Artists</td>
+                            <td> Abin</td>
+                        </tr>
+                        <tr>
+                            <td>Genres</td>
+                            <td>Fantasy, Manhwa, Romance, Shoujo</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+            <!-- Chapters -->
+            <div class="color-back">
+                <div class="chapters">
+                    <h1>Chapters</h1>
+                    <table id="chapter-table">
+                        <tr>
+                            <td>Chapter 11</td>
+                            <td>2 days ago</td>
+                        </tr>
+                        <tr>
+                            <td>Chapter 10</td>
+                            <td>4 days ago</td>
+                        </tr>
+                        <tr>
+                            <td>Chapter 9</td>
+                            <td>6 days ago</td>
+                        </tr>
+                        <tr>
+                            <td>Chapter 8</td>
+                            <td>6 days ago</td>
+                        </tr>
+                        <tr>
+                            <td>Chapter 7</td>
+                            <td>6 days ago</td>
+                        </tr>
+                        <tr class="more-chapters">
+                            <td>Chapter 6</td>
+                            <td>6 days ago</td>
+                        </tr>
+                        <tr class="more-chapters">
+                            <td>Chapter 5</td>
+                            <td>6 days ago</td>
+                        </tr>
+                        <tr class="more-chapters">
+                            <td>Chapter 4</td>
+                            <td>6 days ago</td>
+                        </tr>
+                        <tr class="more-chapters">
+                            <td>Chapter 3</td>
+                            <td>6 days ago</td>
+                        </tr>
+                        <tr class="more-chapters">
+                            <td>Chapter 2</td>
+                            <td>6 days ago</td>
+                        </tr>
+                        <tr class="more-chapters">
+                            <td>Chapter 1</td>
+                            <td>6 days ago</td>
+                        </tr>
+                    </table>
+                    <button onclick="readMore()" id="chapter-button">Show More</button>
+                </div>
+            </div>
+
+            <!-- You May Also Like -->
+            <div class="suggestions">
+                <h1>You May Also Like</h1>
+                <div class="row-flex">
+                    <div class="manhwa">
+                        <a href="#EMPRESS">
+                        <img class="suggested-image" src="./images/empress.png" alt="Manhwa Cover">
+                        <p>The Abandoned Empress</p>
+                        </a>
+                    </div>
+                    <div class="manhwa">
+                        <a href="#CHILD">
+                        <img class="suggested-image" src="./images/child.png" alt="Manhwa Cover">
+                        <p>I Am a Child of This House</p>
+                        </a>
+                    </div>
+                    <div class="manhwa">
+                        <a href="#WMMAP">
+                        <img class="suggested-image" src="./images/wmmap.jpg" alt="Manhwa Cover">
+                        <p>Who Made me a Princess</p>
+                        </a>
+                    </div>
+                    <div class="manhwa">
+                        <a href="#VILLAINESS">
+                        <img class="suggested-image" src="./images/villainess.png" alt="Manhwa Cover">
+                        <p>What It Takes to be a Villainess</p>
+                        </a>
+                    </div>
+                    <div class="manhwa">
+                        <a href="#TEA">
+                        <img class="suggested-image" src="./images/tea.png" alt="Manhwa Cover">
+                        <p>The Duchess’ 50 Tea Recipes</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Discussion -->
+            <div class="discussion" id="comments">
+                <h1>Discussion</h1>
+                <div class="comment-section">
+                    <div class="single-comment">
+                        <img class="profile" src="./images/profile.png" alt="Profile Picture">
+                        <div class="comment-right">
+                            <div class="profile-info">
+                                <b>Ann63</b> <span> &nbsp;&nbsp;11 days ago</span>
+                            </div>
+                            <div class="profile-info">
+                                I hope it updates soon!
+                            </div>
+                            <div>
+                                7&nbsp;&nbsp;
+                                <a href="#LOGIN" aria-label="upvote"><button aria-label="upvote"><i class="fas fa-chevron-up"></i></i></button></a>
+                                <a href="#LOGIN" aria-label="downvote"><button aria-label="downvote"><i class="fas fa-chevron-down"></i></i></button></a>
+                                &nbsp;&nbsp;<a href="#LOGIN">Reply</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-comment">
+                        <img class="profile" src="./images/profile.png" alt="Profile Picture">
+                        <div class="comment-right">
+                            <div class="profile-info">
+                                <b>Sarah</b> <span> &nbsp;&nbsp;16 days ago</span>
+                            </div>
+                            <div class="profile-info">
+                                This is my favorite!!!! I love it so much I went and tried to find the webnovel
+                                but it was in Korean so I couldn't read it. Maybe I should learn Korean? I'm
+                                really just making a longer comment here to show what happens when the comments
+                                are not one line.
+                            </div>
+                            <div>
+                                4&nbsp;&nbsp;
+                                <a href="#LOGIN" aria-label="upvote"><button aria-label="upvote"><i class="fas fa-chevron-up"></i></i></button></a>
+                                <a href="#LOGIN" aria-label="downvote"><button aria-label="downvote"><i class="fas fa-chevron-down"></i></i></button></a>
+                                &nbsp;&nbsp;<a href="#LOGIN">Reply</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-comment">
+                        <img class="profile" src="./images/profile.png" alt="Profile Picture">
+                        <div class="comment-right">
+                            <div class="profile-info">
+                                <b>manhwalover10</b> <span> &nbsp;&nbsp;21 days ago</span>
+                            </div>
+                            <div class="profile-info">
+                                I love manhwa! SPAAAAAAAAM!
+                            </div>
+                            <div>
+                                0&nbsp;&nbsp;
+                                <a href="#LOGIN" aria-label="upvote"><button aria-label="upvote"><i class="fas fa-chevron-up"></i></i></button></a>
+                                <a href="#LOGIN" aria-label="downvote"><button aria-label="downvote"><i class="fas fa-chevron-down"></i></i></button></a>
+                                &nbsp;&nbsp;<a href="#LOGIN">Reply</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-comment-more">
+                        <img class="profile" src="./images/profile.png" alt="Profile Picture">
+                        <div class="comment-right">
+                            <div class="profile-info">
+                                <b>manhwalover10</b> <span> &nbsp;&nbsp;21 days ago</span>
+                            </div>
+                            <div class="profile-info">
+                                SPAAAAAAAAM!
+                            </div>
+                            <div>
+                                -4&nbsp;&nbsp;
+                                <a href="#LOGIN" aria-label="upvote"><button aria-label="upvote"><i class="fas fa-chevron-up"></i></i></button></a>
+                                <a href="#LOGIN" aria-label="downvote"><button aria-label="downvote"><i class="fas fa-chevron-down"></i></i></button></a>
+                                &nbsp;&nbsp;<a href="#LOGIN">Reply</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="single-comment-more">
+                        <img class="profile" src="./images/profile.png" alt="Profile Picture">
+                        <div class="comment-right">
+                            <div class="profile-info">
+                                <b>manhwalover10</b> <span> &nbsp;&nbsp;21 days ago</span>
+                            </div>
+                            <div class="profile-info">
+                                SPAAAAAAAAM! SPAAAAAAAAM! SPAAAAAAAAM!
+                            </div>
+                            <div>
+                                -4&nbsp;&nbsp;
+                                <a href="#LOGIN"><button aria-label="upvote"><i class="fas fa-chevron-up"></i></i></button></a>
+                                <a href="#LOGIN"><button aria-label="downvote"><i class="fas fa-chevron-down"></i></i></button></a>
+                                &nbsp;&nbsp;<a href="#LOGIN">Reply</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button onclick="commentMore()" id="comment-button" >Show More</button>
+            </div>
+        </div>
+
+        <!-- Footer -->
+        <div class="footer">
+            <div class="header-section">
+                <a href="#FACEBOOK" aria-label="facebook link"><img class="icon" src="./images/facebook.png" alt="Facebook"></a>
+                <a href="#INSTAGRAM" aria-label="instagram link"><img class="icon" src="./images/instagram.png" alt="Instagram"></a>
+                <a href="#TWITTER" aria-label="twitter link"><img class="icon" src="./images/twitter.png" alt="Twitter"></a>
+                <a href="#YOUTUBE" aria-label="youtube link"><img class="icon" src="./images/youtube.png" alt="Youtube"></a>
+                <a href="#FLICKR" aria-label="flickr link"><img class="icon" src="./images/flickr.png" alt="Flickr"></a>
+                <a href="#PINTRIST" aria-label="pintrist link"><img class="icon" src="./images/pintrist.png" alt="Pintrist"></a>
+                <a href="#EMAIL" aria-label="email link"><img class="icon" src="./images/email.png" alt="Email"></a>
+            </div>
+            <div class="header-section">
+                <a class="nav-button-bot" href="#HOME" aria-label="home button">MANHWATOP</a>
+                <a class="nav-button-bot" href="#CONTACT" aria-label="contact button">Contact Us</a>
+                <a class="nav-button-bot" href="#ABOUT" aria-label="about us button">About Us</a>
+                <a class="nav-button-bot" href="#PRIVACY" aria-label="privacy policy button">Privacy Policy</a>
+                <a class="nav-button-bot" href="#COOKIES" aria-label="cookie policy button">Cookie Policy</a>
+            </div>
+        </div>
+    </body>
+</html>
