--- a/compliment.html
+++ b/compliment.html
@@ -4,7 +4,7 @@
   <head>
     <title>Iterative Design: Ladder</title>
     <link rel="stylesheet" href="index.css">
-	<link rel="stylesheet" href="iterative.css">
+	<link rel="stylesheet" href="compliment.css">
     <!-- Deployment Link: https://fathomless-castle-93898.herokuapp.com-->
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
@@ -24,11 +24,81 @@
                 </div>
                 <h2 id="title">The Compliment Hub</h2>
                 <img id="webimage" src="./images/compliment.png"></img>
-                <a class="weblink" id="first-weblink" href="./MANHWATOP/home.html">
+                <a class="weblink" id="first-weblink" href="http://ec2-18-222-67-212.us-east-2.compute.amazonaws.com:1234/en/">
                 <button>View Project Website</button></a>
             </div>
             <div class="column-flex">
 				<div class="section">
+					<h1>Introduction</h1>
+					<p>The Compliment Hub is a multi-lingual compliment sending website used to research the psychology of giving
+						and receiving compliments across different cultures. After sending or receiving a compliment, the user is presented with
+						an optional short research survey.</p>
+					<p>I worked in a team to develop The Compliment Hub for a client and focused mostly on
+						front-end development. The project was created with an HTML and Javascript frontend, and a Node.js and MySQL backend.</p>
+					<p>Our work in this project included :</p>
+					<ul>
+						<li>Working closely with the client to match their vision</li>
+						<li>Interviewing users to understand their needs and expectations</li>
+						<li>Planning the project front-end and back-end architecture</li>
+						<li>Creating user flows to generate a user-centered design</li>
+						<li>Developing and deploying the website</li>
+						<li>Performance and security testing</li>
+					</ul>
+				</div>
+				<div class="section">
+					<h1>Working with the Client</h1>
+					<p>Our client was a postdoctoral research fellow from University of Chicago looking to "investigate the psychology of giving
+						and receiving compliments in different cultures."</p>
+					<p>RESEARCH QUESTIONS</p>
+					<p>Our team met frequently with our client to give updates and refine our work.</p>
+				</div>
+				<div class="section">
+					<h1>Initial Sketches</h1>
+					<p>We created initial rough designs of the website. Here are some pages from our initial sketches : </p>
+					<div class="grid2">
+						<img class="design" src="./images/rough0.png"></img>
+						<img class="design" src="./images/rough1.png"></img>
+					</div>
+
+				</div>
+				<div class="section">
+					<h1>User Interviews</h1>
+					<p>We interviewed users to understand their needs and expectations about a compliment sending website. We asked the following
+					questions to three users after creating a first design draft :</p>
+					<h2>Interview Questions</h2>
+					<ul>
+						<li>What functionality do you expect from our project?</li>
+						<li>What features do you think would be most important out of the ones we have planned? (Email System, Survey, Card System
+							Kindness Map, Multilinguality, Sharing on Social Media, Contact Us)</li>
+						<li>How intuitive are the current layouts/designs?</li>
+					</ul>
+					<h2>Response Summary</h2>
+					<p>We found that all three users preferred clean and simple UI. One user wanted premade compliment
+					templates. The Email System and Card System were thought to be most important, and the Contact Us and Sharing on Social Media
+					were thought to be least important. There were mixed responses to our initial design. While all users thought it was
+					intuitive and easy to use, one user thought the interface should be more minimalistic and one user noted the layout
+					was inconsitent between pages.</p>
+				</div>
+				<div class="section">
+					<h1>User Flows</h1>
+					<p>We created the following user flows to help generate a user-centered design and an intuitive website page flow.</p>
+					<br>
+					<img id="userflow" src="./images/userflow.png"></img>
+				</div>
+				<div class="section" id="process">
+					<h1>Second Design</h1>
+					<p>After receiving user feedback and creating user flows, we produced a second design. Here are some pages from our second design :</p>
+					<div class="grid2"><img class="design" src="./images/complimentfull.png"></img>
+						<div class="grid3">
+							<img class="design2" id="second" src="./images/compliment2.png"></img>
+							<img class="design2" src="./images/compliment3.png"></img>
+						</div>
+					</div>
+					<p>Ultimately, our client chose to use a design from an outside designer, which we implemented in HTML and CSS.</p>
+				</div>
+				<div class="section">
+					<h1>Performance and Security Testing</h1>
+					<p></p>
 				</div>
 			</div>
 		</div>
